Use remark+rehype for md parsing
This enables us to use rendition components for the converted HTML.
That is, instead of plain markup plus css, we can plug our own components.
For ex. using rendition `Link` for anchors instead of plain `<a>` tags.

Breaking changes are in styles and `sanitizerOptions` object keys.

Change-type: Major
Signed-off-by: Amit Solanki <amit@balena.io>

--- a/package.json
+++ b/package.json
@@ -113,18 +113,17 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
+    "@mapbox/rehype-prism": "^0.5.0",
     "@react-google-maps/api": "^1.9.7",
     "@rjsf/core": "^2.2.1",
     "@types/ajv-keywords": "^3.4.0",
     "@types/color": "^3.0.0",
     "@types/json-schema": "^7.0.5",
     "@types/lodash": "^4.14.77",
-    "@types/marked": "^0.7.2",
     "@types/node": "^13.13.4",
     "@types/prop-types": "^15.7.0",
     "@types/react-helmet": "^6.0.0",
     "@types/recompose": "^0.26.2",
-    "@types/sanitize-html": "^1.18.3",
     "@types/styled-components": "^5.0.1",
     "@types/styled-system": "^4.0.0",
     "@types/uuid": "^3.4.3",
@@ -134,11 +133,11 @@
     "color-hash": "^1.0.3",
     "copy-to-clipboard": "^3.0.8",
     "grommet": "^2.14.0",
-    "highlight.js": "^10.0.3",
     "json-e": "^4.1.0",
+    "hast-util-sanitize": "^3.0.0",
     "lodash": "^4.17.11",
-    "marked": "^0.8.0",
     "mermaid": "8.4.0",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react-google-recaptcha": "^2.0.0-rc.1",
     "react-helmet": "^6.0.0",
@@ -147,11 +146,16 @@
     "react-simplemde-editor": "^4.1.1",
     "recompose": "0.26.0",
     "regex-parser": "^2.2.7",
+    "rehype-raw": "^4.0.2",
+    "rehype-react": "^6.1.0",
+    "rehype-sanitize": "^3.0.1",
+    "remark-parse": "^8.0.3",
+    "remark-rehype": "^7.0.0",
     "resize-observer": "^1.0.0",
-    "sanitize-html": "^1.20.1",
     "styled-components": "^5.0.1",
     "styled-system": "^4.1.0",
     "tslib": "^2.0.0",
+    "unified": "^9.1.0",
     "uuid": "^3.2.1",
     "xterm": "^4.8.1",
     "xterm-addon-fit": "^0.4.0"
